4.0a2
	Fix garbled log (Bernhard Schneider)
	Fix build on Tru64 (Attila Bruncsak)
4.0a1
	Fix again an accept-all-bug when built with SPF (AIDA Shinra)
	Fix macro handling in ACL (AIDA Shinra)
	%% syntax in format strings (AIDA Shinra)
	Clarified "%Xm" and "%Xh" semantics (AIDA Shinra)
	Fixed a memory leak at mlfi_eom (AIDA Shinra)
	Fix a bug where doing RCPT twice when blacklised succeed (AIDA Shinra)
3.1.8
	Allow filtering on the HELO string
	Back out previous SPF fix, it caused accept-all with SPF-less builds
3.1.7
	Fix an accept-all-bug when built with SPF (AIDA Shinra)
	Option to perform urlchecks in forked instance to avoid thread-unsafety
	Allow escaping of " in strings and / in regex
	Fix whitelisting using access.db (Georg Horn)
	Fix NULL pointer referencing in urlcheck code
	Fix body storage so that locators (^ and $) work for body regex
	Fix spurious warning about unknown whitelisting conditions
	Fix memory leaks when using urlchecks
	Makes urlcheck properties and values case insensitives
	Do not retain urlcheck properties if the urlcheck clause did not match
	Allow loading regex in lists of body clauses
	Option to clear urlcheck prop before handling a new recipient
	%D format string for getting the list of matching DNSRBL
	Avoid performing multiple DNSRBL checks for the same IP
	Allow reusing in the ACL of properties gathered from urlcheck
	Fix wrong display of %Xc %Xe and %Xh substitutions 
	Fix documentation: %Xh instead of %Xr
	stat should not report X-Greylist header is message was rejected
	Fix a documentation bug: sender e-mail is %f, not %s
3.1.6
	More format strings, for SMTP code, extended code, message, header
	Fix a crash when using regex without grouping ()
	Document the CVS location in README
3.1.5
	Fix double free when using content filtering
	ACL clauses can now be negated
	msg clauses in ACL can use format strings substitution
	Add an ACL clause to customize X-Greylist header
	Fix serious bugs in DNSRBL code (Jacques Beigbeder)