@@ -1,4 +1,5 @@
 4.0a2
+	Fix X-Greylist lossage (AIDA Shinra)
 	Fix garbled log (Bernhard Schneider)
 	Fix build on Tru64 (Attila Bruncsak)
 4.0a1
